--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="google-site-verification" content="BqErOE-liFIMoPEGMDkNm3nGafCmQhGi-KZm18V1vds" />
     <title>!ดู! นางฟ้ากรรมกร EP.4 (ตอนล่าสุด) ดูสด ดูย้อนหลัง!</title>
     <meta name="title" content="!ดู! นางฟ้ากรรมกร EP.4 (ตอนล่าสุด) ดูสด ดูย้อนหลัง!" />
     <meta name="description" content="!ดู! นางฟ้ากรรมกร EP.4 (ตอนล่าสุด) ดูสด ดูย้อนหลัง! ออกอากาศ วันจันทร์ที่ 24 มิถุนายน 2567 นางฟ้ากรรมกร ดูซีรีส์ไทย HD ดูผ่านมือถือฟรี ไม่มีโฆษณา!" />
